deployments/demo/docker-registry-proxy/k8s/gcp-provider.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: docker-registry-proxy
spec:
  template:
    spec:
      containers:
        - name: docker-registry-proxy
